Set theme jekyll-theme-cayman

--- a/_config.yml
+++ b/_config.yml
@@ -26,3 +26,5 @@ comments:                    # embed disqus or isso comments
 plugins:
  - jekyll-feed
  - jekyll-default-layout
+
+theme: jekyll-theme-cayman
