--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Organized Chaos"
+title: "Sarah Dwyer"
 author: "Sarah Dwyer"
 description: "infra/devops/cs learnings"
 permalink: /:title/
@@ -11,12 +11,15 @@ dark_footer: true            # keep the footer dark
 # style: minimal             # use a simpler style inspired by the minima theme
 
 navigation:                  # site navigation in the header
-  - Twitter: "https://twitter.com/_sdwyer"
-  - Github: "https://github.com/sbd/sbd.github.io"
+#  - Twitter: "https://twitter.com/_sdwyer"
+#  - Github: "https://github.com/sbd/sbd.github.io"
+#  - LinkedIn: "https://www.linkedin.com/in/sbd/"
 
-#icons:                      # icons in the header, see http://fontawesome.com/icons
+icons:                      # icons in the header, see http://fontawesome.com/icons
+  github: "https://github.com/niklasbuschmann/contrast"
+  twitter: "https://twitter.com/_sdwyer"
+  linkedin: "https://www.linkedin.com/in/sbd/"
 #  envelope: "mailto:niklasbuschmann@users.noreply.github.com"
-#  github: "https://github.com/niklasbuschmann/contrast"
 #  rss: "/contrast/feed.xml"
 
 comments:                    # embed disqus or isso comments
