--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@ permalink: /:title/
 lang: "en"
 
 show_footer: false           # show the "previous" and "next" links at the end of each post
-dark_theme: true             # use the dark mode as default
+dark_theme: false             # use the dark mode as default
 dark_header: true            # keep the header dark
 dark_footer: true            # keep the footer dark
-# style: minimal             # use a simpler style inspired by the minima theme
+style: minimal             # use a simpler style inspired by the minima theme
 
 navigation:                  # site navigation in the header
 #  - Twitter: "https://twitter.com/_sdwyer"
