--- a/_config.yml
+++ b/_config.yml
@@ -11,16 +11,16 @@ dark_footer: false            # keep the footer dark
 style: minimal             # use a simpler style inspired by the minima theme
 
 navigation:                  # site navigation in the header
-#  - Twitter: "https://twitter.com/_sdwyer"
+#  - Twitter: "https://twitter.com/sdwyer__"
 #  - Github: "https://github.com/sbd/sbd.github.io"
 #  - LinkedIn: "https://www.linkedin.com/in/sbd/"
 
 icons:                      # icons in the header, see https://fontawesome.com/icons
   github: "https://github.com/sbd"
+  stack-overflow: "https://stackoverflow.com/cv/sbd"
   twitter: "https://twitter.com/sdwyer__"
   linkedin: "https://www.linkedin.com/in/sbd/"
   medium: "https://medium.com/@sdwyer__"
-  stack-overflow: "https://stackoverflow.com/users/10177443/dwyer"
 #  envelope: "mailto:AAAAAA@users.noreply.github.com"
 #  rss: "/contrast/feed.xml"
 
