adds: url and main branch changes

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Sarah Dwyer"
 author: "Sarah Dwyer"
-description: "devops, infra, and beyond"
+description: "infra, security, and beyond"
 permalink: /:title/
 lang: "en"
 
